# kitdm-pycli

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  codemeta.json  mypy.ini  properties.example.json  pyproject.toml
.github/workflows/: CI.yml
.reuse/: dep5
kitdm_pycli/: main.py
kitdm_pycli/clients/: base_repo_client.py  metastore_client.py  typed_pid_maker_client.py
kitdm_pycli/helpers/: base_repo_helper.py  command_line_utils.py  file_utils.py  metastore_helper.py  render_utils.py  service_helper.py  typed_pid_maker_helper.py  url_utils.py
tests/: properties-test.json  test_base_repo_arg_parse.py  test_base_repo_client.py  test_base_repo_client_create  test_base_repo_client_download  test_base_repo_client_get  test_base_repo_client_upload  test_metastore_arg_parse.py
tests/input/: data_resource.json
